--- a/style.css
+++ b/style.css
@@ -1,119 +1,100 @@
-@import url("https://fonts.googleapis.com/css2?family=Bree+Serif&family=Caveat:wght@400;700&family=Lobster&family=Monoton&family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,700&family=Playfair+Display:ital,wght@0,400;0,700;1,700&family=Roboto:ital,wght@0,400;0,700;1,400;1,700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,700&family=Work+Sans:ital,wght@0,400;0,700;1,700&display=swap");
-
-.todos-bg-container {
-  background-color: #f9fbfe;
-  height: 100vh;
-}
-
-.todos-heading {
-  text-align: center;
-  font-family: "Roboto";
-  font-size: 46px;
-  font-weight: 500;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.create-task-heading {
-  font-family: "Roboto";
-  font-size: 32px;
-  font-weight: 700;
-}
-
-.create-task-heading-subpart {
-  font-family: "Roboto";
-  font-size: 32px;
-  font-weight: 500;
-}
-
-.todo-items-heading {
-  font-family: "Roboto";
-  font-size: 32px;
-  font-weight: 700;
-}
-
-.todo-items-heading-subpart {
-  font-family: "Roboto";
-  font-size: 32px;
-  font-weight: 500;
-}
-
-.todo-items-container {
+* {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
+  box-sizing: border-box;
 }
-
-.todo-item-container {
-  margin-top: 15px;
-}
-
-.todo-user-input {
-  background-color: white;
+.container {
   width: 100%;
-  border-style: solid;
-  border-width: 1px;
-  border-color: #e4e7eb;
+  min-height: 100vh;
+  background: linear-gradient(135deg, #153677, #4e085f);
+  padding: 10px;
+}
+.todo-app {
+  width: 100%;
+  max-width: 540px;
+  background: #fff;
+  margin: 100px auto 20px;
+  padding: 40px 30px 70px;
   border-radius: 10px;
-  margin-top: 10px;
-  padding: 15px;
 }
-
-.button {
-  color: white;
-  background-color: #4c63b6;
-  font-family: "Roboto";
-  font-size: 18px;
-  border-width: 0;
-  border-radius: 4px;
-  margin-top: 20px;
-  margin-bottom: 50px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  padding-right: 20px;
+.todo-app h2 {
+  color: #002765;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.todo-app h2 img {
+  width: 30px;
+  margin-left: 10px;
+}
+.row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #edeef0;
+  border-radius: 30px;
   padding-left: 20px;
+  margin-bottom: 25px;
 }
-
-.label-container {
-  background-color: #e6f6ff;
-  width: 100%;
-  border-style: solid;
-  border-width: 5px;
-  border-color: #096f92;
-  border-right: none;
-  border-top: none;
-  border-bottom: none;
-  border-radius: 4px;
+input {
+  flex: 1;
+  border: none;
+  outline: none;
+  background: transparent;
+  padding: 10px;
+  font-weight: 14px;
 }
-
-.checkbox-input {
-  width: 20px;
-  height: 20px;
-  margin-top: 12px;
-  margin-right: 12px;
-}
-
-.checkbox-label {
-  font-family: "Roboto";
+button {
+  border: none;
+  outline: none;
+  padding: 16px 50px;
+  background: #ff5945;
+  color: #fff;
   font-size: 16px;
-  font-weight: 400;
-  width: 82%;
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border-radius: 5px;
+  cursor: pointer;
+  border-radius: 40px;
+}
+ul li {
+  list-style: none;
+  font-size: 17px;
+  padding: 12px 8px 12px 50px;
+  user-select: none;
+  cursor: pointer;
+  position: relative;
 }
 
-.delete-icon-container {
-  text-align: right;
-  width: 18%;
+ul li::before {
+  content: " ";
+  position: absolute;
+  height: 28px;
+  width: 28px;
+  border-radius: 50%;
+  background-image: url(images/unchecked.png);
+  background-size: cover;
+  background-position: center;
+  top: 12px;
+  left: 8px;
 }
-
-.delete-icon {
-  padding: 15px;
-}
-
-.checked {
+ul li.checked {
+  color: #555;
   text-decoration: line-through;
+}
+ul li.checked::before {
+  background-image: url(images/checked.png);
+}
+ul li span {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  width: 40px;
+  height: 40px;
+  font-size: 22px;
+  color: #555;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+}
+ul li span:hover {
+  background: #edeef0;
 }
